# Iliop

./: .gitignore  CMakeLists.txt  README.md  iliop_ideas.txt
src/: Card.cpp  Card.h  CombatState.h  Deck.cpp  Deck.h  UIRenderer.cpp  UIRenderer.h  main.cpp
src/Card/: Card.cpp  Card.h
src/Character/: Character.h
src/Deck/: Deck.cpp  Deck.h
src/Effects/: Effect.h  FusionEffect.h  MultiEffect.h
src/Effects/EffectTypes/: DamageEffect.h  HealEffect.h  ShieldEffect.h
src/Effects/EffectTypes/Alchemist/: AcidSplash.h  CatalystBomb.h  Copper.h  Gold.h  Iron.h  Lead.h  Mercury.h  PotionBrew.h  Reaction.h  Silver.h  Tin.h  Toss.h
src/Effects/EffectTypes/Cleric/: BlindingLight.h  Condemn.h  DivineAegis.h  DivineGuidance.h  HolyZeal.h  Purge.h  Redemption.h  Ritual.h
src/Effects/EffectTypes/Enemy/: Difficulty1Skills.h  Difficulty2Skills.h  Difficulty3Skills.h  Difficulty4Skills.h  EnemyDefensiveStrike.h  EnemyPoisonStrike.h  EnemySelfBuff.h  EnemyWeakening.h
src/Effects/EffectTypes/Fusion/: BeastRampageFusion.h  BloodFrenzyFusion.h  CosmicShieldFusion.h  DivineArrowFusion.h  ExistentialCrisis.h  OmegaAnnihilation.h  PrimordialChaos.h  UniversalSingularity.h  VoidStormFusion.h
src/Effects/EffectTypes/Mage/: ArcaneSurge.h  AstralShift.h  EldritchBlast.h  Infinity.h  UnstableVolley.h  VoidEcho.h  VoidGrasp.h  VoidProwess.h
src/Effects/EffectTypes/Necromancer/: ArmyOfTheDamned.h  ArmySurge.h  BoneLegion.h  BoneSplinter.h  CorpseExplosion.h  CryptShield.h  DeathMark.h  GraveCall.h  Plague.h  RaiseDead.h  RottingBite.h  SoulConsumption.h  SoulGathering.h  SoulHarvest.h  UnleashArmy.h
src/Effects/EffectTypes/Ranger/: Aim.h  ArrowVolley.h  HuntersMark.h  Jump.h  Metamorphosis.h  PredatorInstinct.h  PredatorsMaul.h  PrimalArrow.h  Prowl.h
src/Effects/EffectTypes/Technomancer/: ArmorInject.h  BleedInject.h  DefensiveMode.h  MachinePower.h  Overclock.h  Overdrive.h  PerfectCreation.h  PowerInject.h  ShockInject.h  StatusDrive.h  SystemCrash.h  TechSurge.h  TechnomancerTransform.h  VampiricInject.h  VoidInject.h
src/Effects/EffectTypes/WarAngel/: AngelicAscension.h  Betray.h  BlessedSword.h  CelestialWrath.h  GoldenLance.h  (+7 more)
src/Enemy/: Enemy.cpp  Enemy.h
src/Managers/: CardFactory.h  CardResolver.cpp  CardResolver.h  CharacterFactory.h  EnemyFactory.cpp  EnemyFactory.h
src/Other/: AllStatuses.h  CombatState.cpp  CombatState.h  GameState.h  Particle.h  Resource.h  Status.h
src/UI/: UIRenderer.cpp  UIRenderer.h
(+8 files in other folders)
